[workspace]
resolver = "2"

members = [
  "ddf"
]

# [package]
metadata.crane.name = "ddf"
package.version = "0.1.0"
# edition = "2021"
# license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
config = "0.14"
directories = "5"
humansize = "2.1"
libc = "0.2"
nix = {version="0.29", features = ["fs"]}
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.13"
tracing = { version = "0.1", features = [ "log"] }
tracing-error = {version="0.2", features=["traced-error"]}
tracing-forest = { version = "0.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
