[package]
name = "ddf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { workspace = true }
directories = {workspace = true}
humansize = { workspace = true }
libc = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true, optional=true}
tracing-forest = { workspace = true, optional=true}
tracing-subscriber = { workspace = true, optional=true }

[dev-dependencies]
tempfile = { workspace = true }


[features]
default=[]
console = ["dep:tracing-subscriber", "dep:tracing-error"]
forest = ["dep:tracing-subscriber", "dep:tracing-error", "dep:tracing-forest"]
